milestone1/src/parser.output
Terminals unused in grammar

    INTEGER
    FLOATNUMBER
    SHORT_STRING
    LONG_STRING
    SLASH
    DOUBLESLASH
    COLONEQUAL
    NAME_DUNDER
    MAIN_DUNDER
    INIT_DUNDER
    SPECIAL_CHAR
    UNDERSCORE
    DOUBLE_QUOTE
    SINGLE_QUOTE
    BACKSLASH
    SPACE
    AWAIT
    IMPORT
    PASS
    EXCEPT
    RAISE
    FINALLY
    LAMBDA
    TRY
    AS
    FROM
    NONLOCAL
    DEL
    WITH
    ASYNC
    YIELD
    COMMENT
    ELLIPSIS


Grammar

    0 $accept: module $end

    1 module: file_input

    2 file_input: file_input NEWLINE
    3           | file_input stmt
    4           | NEWLINE
    5           | stmt

    6 funcdef: DEF NAME parameters ARROW test COLON func_body_suite
    7        | DEF NAME parameters COLON func_body_suite

    8 parameters: LEFTBRACKET typedargslist RIGHTBRACKET
    9           | LEFTBRACKET RIGHTBRACKET

   10 typedargslist: argument1
   11              | typedargslist COMMA argument1

   12 argument1: tfpdef
   13          | tfpdef ASSIGN test

   14 tfpdef: NAME
   15       | NAME COLON test

   16 stmt: simple_stmt
   17     | compound_stmt

   18 simple_stmt: small_stmt_help SEMICOLON NEWLINE
   19            | small_stmt_help NEWLINE

   20 small_stmt_help: small_stmt
   21                | small_stmt_help SEMICOLON small_stmt

   22 small_stmt: expr_stmt
   23           | flow_stmt
   24           | global_stmt
   25           | assert_stmt

   26 expr_stmt: testlist COLON test
   27          | testlist COLON test ASSIGN testlist
   28          | testlist augassign testlist
   29          | testlist
   30          | testlist ASSIGN assign_help

   31 assign_help: testlist
   32            | testlist ASSIGN assign_help

   33 augassign: PLUSEQUAL
   34          | MINUSEQUAL
   35          | MULTIPLYEQUAL
   36          | ATEQUAL
   37          | DIVIDEEQUAL
   38          | PERCENTEQUAL
   39          | ANDEQUAL
   40          | OREQUAL
   41          | XOREQUAL
   42          | LEFTSHIFTEQUAL
   43          | RIGHTSHIFTEQUAL
   44          | EXPONENTEQUAL
   45          | DIVIDEDIVIDEEQUAL

   46 flow_stmt: break_stmt
   47          | continue_stmt
   48          | return_stmt

   49 break_stmt: BREAK

   50 continue_stmt: CONTINUE

   51 return_stmt: RETURN testlist
   52            | RETURN

   53 global_stmt: GLOBAL NAME
   54            | global_stmt COMMA NAME

   55 assert_stmt: ASSERT test COMMA test
   56            | ASSERT test

   57 compound_stmt: if_stmt
   58              | while_stmt
   59              | for_stmt
   60              | funcdef
   61              | classdef

   62 if_stmt: IF test COLON suite if_stmt_help ELSE COLON suite
   63        | IF test COLON suite if_stmt_help
   64        | IF test COLON suite ELSE COLON suite
   65        | IF test COLON suite

   66 if_stmt_help: ELIF test COLON suite
   67             | ELIF test COLON suite if_stmt_help

   68 while_stmt: WHILE test COLON suite
   69           | WHILE test COLON suite ELSE COLON suite

   70 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
   71         | FOR exprlist IN testlist COLON suite

   72 suite: simple_stmt
   73      | NEWLINE INDENT stmt_help DEDENT

   74 stmt_help: stmt
   75          | stmt stmt_help

   76 test: or_test
   77     | or_test IF or_test ELSE test

   78 or_test: and_test
   79        | or_test OR and_test

   80 and_test: not_test
   81         | and_test AND not_test

   82 not_test: NOT not_test
   83         | comparison

   84 comparison: expr
   85           | comparison comp_op expr

   86 comp_op: EQUAL
   87        | LESS
   88        | GREATER
   89        | GREATEREQ
   90        | LESSEQ
   91        | NOTEQUAL
   92        | IS
   93        | IS NOT
   94        | IN
   95        | NOT IN

   96 expr: xor_expr
   97     | expr BITOR xor_expr

   98 xor_expr: and_expr
   99         | xor_expr BITXOR and_expr

  100 and_expr: shift_expr
  101         | and_expr AMPERSAND shift_expr

  102 shift_expr: arith_expr
  103           | shift_expr LEFTSHIFT arith_expr
  104           | shift_expr RIGHTSHIFT arith_expr

  105 arith_expr: term
  106           | arith_expr PLUS term
  107           | arith_expr MINUS term

  108 term: factor
  109     | term MULTIPLY factor
  110     | term AT factor
  111     | term DIVIDE factor
  112     | term MOD factor
  113     | term DIVIDEDIVIDE factor

  114 factor: power
  115       | PLUS factor
  116       | MINUS factor
  117       | BITNOT factor

  118 power: atom_expr
  119      | atom_expr EXP factor

  120 atom_expr: atom
  121          | atom_expr trailer

  122 atom: LEFTBRACKET testlist RIGHTBRACKET
  123     | LEFTBRACKET RIGHTBRACKET
  124     | LEFTSQUAREBRACKET testlist RIGHTSQUAREBRACKET
  125     | LEFTSQUAREBRACKET RIGHTSQUAREBRACKET
  126     | LEFTCURLYBRACKET RIGHTCURLYBRACKET
  127     | NAME
  128     | NUMBER
  129     | string_help
  130     | NONE
  131     | TRUE
  132     | FALSE

  133 string_help: string_help STRING
  134            | STRING

  135 trailer: LEFTBRACKET RIGHTBRACKET
  136        | LEFTBRACKET arglist RIGHTBRACKET
  137        | LEFTSQUAREBRACKET test RIGHTSQUAREBRACKET
  138        | DOT NAME

  139 exprlist: exprlist_help
  140         | exprlist_help COMMA

  141 exprlist_help: expr
  142              | exprlist_help COMMA expr

  143 testlist: testlist_list COMMA
  144         | testlist_list

  145 testlist_list: test
  146              | testlist_list COMMA test

  147 classdef: CLASS NAME COLON suite
  148         | CLASS NAME LEFTBRACKET RIGHTBRACKET COLON suite
  149         | CLASS NAME LEFTBRACKET arglist RIGHTBRACKET COLON suite

  150 arglist: arglist_help
  151        | arglist_help COMMA

  152 arglist_help: argument
  153             | arglist_help COMMA argument

  154 func_body_suite: simple_stmt
  155                | NEWLINE INDENT stmt_help DEDENT

  156 argument: test
  157         | test ASSIGN test
  158         | test comp_for

  159 comp_iter: comp_for
  160          | comp_if

  161 comp_for: FOR exprlist IN or_test
  162         | FOR exprlist IN or_test comp_iter

  163 comp_if: IF or_test
  164        | IF or_test comp_iter


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <tok> (258)
    FLOATNUMBER <tok> (259)
    NUMBER <tok> (260) 128
    STRING <tok> (261) 133 134
    SHORT_STRING <tok> (262)
    LONG_STRING <tok> (263)
    PLUS <tok> (264) 106 115
    MINUS <tok> (265) 107 116
    MULTIPLY <tok> (266) 109
    EXP <tok> (267) 119
    SLASH <tok> (268)
    DOUBLESLASH <tok> (269)
    DIVIDE <tok> (270) 111
    DIVIDEDIVIDE <tok> (271) 113
    MOD <tok> (272) 112
    AT <tok> (273) 110
    RIGHTSHIFT <tok> (274) 104
    LEFTSHIFT <tok> (275) 103
    AMPERSAND <tok> (276) 101
    EQUAL <tok> (277) 86
    NOTEQUAL <tok> (278) 91
    GREATER <tok> (279) 88
    LESS <tok> (280) 87
    GREATEREQ <tok> (281) 89
    LESSEQ <tok> (282) 90
    BITOR <tok> (283) 97
    BITXOR <tok> (284) 99
    BITNOT <tok> (285) 117
    ASSIGN <tok> (286) 13 27 30 32 157
    PLUSEQUAL <tok> (287) 33
    MINUSEQUAL <tok> (288) 34
    MULTIPLYEQUAL <tok> (289) 35
    DIVIDEEQUAL <tok> (290) 37
    PERCENTEQUAL <tok> (291) 38
    EXPONENTEQUAL <tok> (292) 44
    ANDEQUAL <tok> (293) 39
    OREQUAL <tok> (294) 40
    XOREQUAL <tok> (295) 41
    LEFTSHIFTEQUAL <tok> (296) 42
    RIGHTSHIFTEQUAL <tok> (297) 43
    COLONEQUAL <tok> (298)
    LEFTBRACKET <tok> (299) 8 9 122 123 135 136 148 149
    RIGHTBRACKET <tok> (300) 8 9 122 123 135 136 148 149
    LEFTSQUAREBRACKET <tok> (301) 124 125 137
    RIGHTSQUAREBRACKET <tok> (302) 124 125 137
    LEFTCURLYBRACKET <tok> (303) 126
    RIGHTCURLYBRACKET <tok> (304) 126
    COMMA <tok> (305) 11 54 55 140 142 143 146 151 153
    COLON <tok> (306) 6 7 15 26 27 62 63 64 65 66 67 68 69 70 71 147 148 149
    SEMICOLON <tok> (307) 18 21
    DOT <tok> (308) 138
    ARROW <tok> (309) 6
    DIVIDEDIVIDEEQUAL <tok> (310) 45
    ATEQUAL <tok> (311) 36
    NAME_DUNDER <tok> (312)
    MAIN_DUNDER <tok> (313)
    INIT_DUNDER <tok> (314)
    SPECIAL_CHAR <tok> (315)
    UNDERSCORE <tok> (316)
    DOUBLE_QUOTE <tok> (317)
    SINGLE_QUOTE <tok> (318)
    BACKSLASH <tok> (319)
    SPACE <tok> (320)
    FALSE <tok> (321) 132
    AWAIT <tok> (322)
    ELSE <tok> (323) 62 64 69 70 77
    IMPORT <tok> (324)
    PASS <tok> (325)
    NONE <tok> (326) 130
    BREAK <tok> (327) 49
    EXCEPT <tok> (328)
    IN <tok> (329) 70 71 94 95 161 162
    RAISE <tok> (330)
    TRUE <tok> (331) 131
    CLASS <tok> (332) 147 148 149
    FINALLY <tok> (333)
    IS <tok> (334) 92 93
    RETURN <tok> (335) 51 52
    AND <tok> (336) 81
    CONTINUE <tok> (337) 50
    FOR <tok> (338) 70 71 161 162
    LAMBDA <tok> (339)
    TRY <tok> (340)
    AS <tok> (341)
    DEF <tok> (342) 6 7
    FROM <tok> (343)
    NONLOCAL <tok> (344)
    WHILE <tok> (345) 68 69
    ASSERT <tok> (346) 55 56
    DEL <tok> (347)
    GLOBAL <tok> (348) 53
    NOT <tok> (349) 82 93 95
    WITH <tok> (350)
    ASYNC <tok> (351)
    ELIF <tok> (352) 66 67
    IF <tok> (353) 62 63 64 65 77 163 164
    OR <tok> (354) 79
    YIELD <tok> (355)
    NAME <tok> (356) 6 7 14 15 53 54 127 138 147 148 149
    COMMENT <tok> (357)
    NEWLINE <tok> (358) 2 4 18 19 73 155
    INDENT <tok> (359) 73 155
    DEDENT <tok> (360) 73 155
    ELLIPSIS <tok> (361)


Nonterminals, with rules where they appear

    $accept (107)
        on left: 0
    module <num> (108)
        on left: 1
        on right: 0
    file_input <num> (109)
        on left: 2 3 4 5
        on right: 1 2 3
    funcdef <num> (110)
        on left: 6 7
        on right: 60
    parameters <num> (111)
        on left: 8 9
        on right: 6 7
    typedargslist <num> (112)
        on left: 10 11
        on right: 8 11
    argument1 <num> (113)
        on left: 12 13
        on right: 10 11
    tfpdef <num> (114)
        on left: 14 15
        on right: 12 13
    stmt <num> (115)
        on left: 16 17
        on right: 3 5 74 75
    simple_stmt <num> (116)
        on left: 18 19
        on right: 16 72 154
    small_stmt_help <num> (117)
        on left: 20 21
        on right: 18 19 21
    small_stmt <num> (118)
        on left: 22 23 24 25
        on right: 20 21
    expr_stmt <num> (119)
        on left: 26 27 28 29 30
        on right: 22
    assign_help <num> (120)
        on left: 31 32
        on right: 30 32
    augassign <num> (121)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 28
    flow_stmt <num> (122)
        on left: 46 47 48
        on right: 23
    break_stmt <num> (123)
        on left: 49
        on right: 46
    continue_stmt <num> (124)
        on left: 50
        on right: 47
    return_stmt <num> (125)
        on left: 51 52
        on right: 48
    global_stmt <num> (126)
        on left: 53 54
        on right: 24 54
    assert_stmt <num> (127)
        on left: 55 56
        on right: 25
    compound_stmt <num> (128)
        on left: 57 58 59 60 61
        on right: 17
    if_stmt <num> (129)
        on left: 62 63 64 65
        on right: 57
    if_stmt_help <num> (130)
        on left: 66 67
        on right: 62 63 67
    while_stmt <num> (131)
        on left: 68 69
        on right: 58
    for_stmt <num> (132)
        on left: 70 71
        on right: 59
    suite <num> (133)
        on left: 72 73
        on right: 62 63 64 65 66 67 68 69 70 71 147 148 149
    stmt_help <num> (134)
        on left: 74 75
        on right: 73 75 155
    test <num> (135)
        on left: 76 77
        on right: 6 13 15 26 27 55 56 62 63 64 65 66 67 68 69 77 137 145 146 156 157 158
    or_test <num> (136)
        on left: 78 79
        on right: 76 77 79 161 162 163 164
    and_test <num> (137)
        on left: 80 81
        on right: 78 79 81
    not_test <num> (138)
        on left: 82 83
        on right: 80 81 82
    comparison <num> (139)
        on left: 84 85
        on right: 83 85
    comp_op <num> (140)
        on left: 86 87 88 89 90 91 92 93 94 95
        on right: 85
    expr <num> (141)
        on left: 96 97
        on right: 84 85 97 141 142
    xor_expr <num> (142)
        on left: 98 99
        on right: 96 97 99
    and_expr <num> (143)
        on left: 100 101
        on right: 98 99 101
    shift_expr <num> (144)
        on left: 102 103 104
        on right: 100 101 103 104
    arith_expr <num> (145)
        on left: 105 106 107
        on right: 102 103 104 106 107
    term <num> (146)
        on left: 108 109 110 111 112 113
        on right: 105 106 107 109 110 111 112 113
    factor <num> (147)
        on left: 114 115 116 117
        on right: 108 109 110 111 112 113 115 116 117 119
    power <num> (148)
        on left: 118 119
        on right: 114
    atom_expr <num> (149)
        on left: 120 121
        on right: 118 119 121
    atom <num> (150)
        on left: 122 123 124 125 126 127 128 129 130 131 132
        on right: 120
    string_help <num> (151)
        on left: 133 134
        on right: 129 133
    trailer <num> (152)
        on left: 135 136 137 138
        on right: 121
    exprlist <num> (153)
        on left: 139 140
        on right: 70 71 161 162
    exprlist_help <num> (154)
        on left: 141 142
        on right: 139 140 142
    testlist <num> (155)
        on left: 143 144
        on right: 26 27 28 29 30 31 32 51 70 71 122 124
    testlist_list <num> (156)
        on left: 145 146
        on right: 143 144 146
    classdef <num> (157)
        on left: 147 148 149
        on right: 61
    arglist <num> (158)
        on left: 150 151
        on right: 136 149
    arglist_help <num> (159)
        on left: 152 153
        on right: 150 151 153
    func_body_suite <num> (160)
        on left: 154 155
        on right: 6 7
    argument <num> (161)
        on left: 156 157 158
        on right: 152 153
    comp_iter <num> (162)
        on left: 159 160
        on right: 162 164
    comp_for <num> (163)
        on left: 161 162
        on right: 158 159
    comp_if <num> (164)
        on left: 163 164
        on right: 160


State 0

    0 $accept: • module $end

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    BREAK              shift, and go to state 11
    TRUE               shift, and go to state 12
    CLASS              shift, and go to state 13
    RETURN             shift, and go to state 14
    CONTINUE           shift, and go to state 15
    FOR                shift, and go to state 16
    DEF                shift, and go to state 17
    WHILE              shift, and go to state 18
    ASSERT             shift, and go to state 19
    GLOBAL             shift, and go to state 20
    NOT                shift, and go to state 21
    IF                 shift, and go to state 22
    NAME               shift, and go to state 23
    NEWLINE            shift, and go to state 24

    module           go to state 25
    file_input       go to state 26
    funcdef          go to state 27
    stmt             go to state 28
    simple_stmt      go to state 29
    small_stmt_help  go to state 30
    small_stmt       go to state 31
    expr_stmt        go to state 32
    flow_stmt        go to state 33
    break_stmt       go to state 34
    continue_stmt    go to state 35
    return_stmt      go to state 36
    global_stmt      go to state 37
    assert_stmt      go to state 38
    compound_stmt    go to state 39
    if_stmt          go to state 40
    while_stmt       go to state 41
    for_stmt         go to state 42
    test             go to state 43
    or_test          go to state 44
    and_test         go to state 45
    not_test         go to state 46
    comparison       go to state 47
    expr             go to state 48
    xor_expr         go to state 49
    and_expr         go to state 50
    shift_expr       go to state 51
    arith_expr       go to state 52
    term             go to state 53
    factor           go to state 54
    power            go to state 55
    atom_expr        go to state 56
    atom             go to state 57
    string_help      go to state 58
    testlist         go to state 59
    testlist_list    go to state 60
    classdef         go to state 61


State 1

  128 atom: NUMBER •

    $default  reduce using rule 128 (atom)


State 2

  134 string_help: STRING •

    $default  reduce using rule 134 (string_help)


State 3

  115 factor: PLUS • factor

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NAME               shift, and go to state 23

    factor       go to state 62
    power        go to state 55
    atom_expr    go to state 56
    atom         go to state 57
    string_help  go to state 58


State 4

  116 factor: MINUS • factor

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NAME               shift, and go to state 23

    factor       go to state 63
    power        go to state 55
    atom_expr    go to state 56
    atom         go to state 57
    string_help  go to state 58


State 5

  117 factor: BITNOT • factor

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NAME               shift, and go to state 23

    factor       go to state 64
    power        go to state 55
    atom_expr    go to state 56
    atom         go to state 57
    string_help  go to state 58


State 6

  122 atom: LEFTBRACKET • testlist RIGHTBRACKET
  123     | LEFTBRACKET • RIGHTBRACKET

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    RIGHTBRACKET       shift, and go to state 65
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NOT                shift, and go to state 21
    NAME               shift, and go to state 23

    test           go to state 43
    or_test        go to state 44
    and_test       go to state 45
    not_test       go to state 46
    comparison     go to state 47
    expr           go to state 48
    xor_expr       go to state 49
    and_expr       go to state 50
    shift_expr     go to state 51
    arith_expr     go to state 52
    term           go to state 53
    factor         go to state 54
    power          go to state 55
    atom_expr      go to state 56
    atom           go to state 57
    string_help    go to state 58
    testlist       go to state 66
    testlist_list  go to state 60


State 7

  124 atom: LEFTSQUAREBRACKET • testlist RIGHTSQUAREBRACKET
  125     | LEFTSQUAREBRACKET • RIGHTSQUAREBRACKET

    NUMBER              shift, and go to state 1
    STRING              shift, and go to state 2
    PLUS                shift, and go to state 3
    MINUS               shift, and go to state 4
    BITNOT              shift, and go to state 5
    LEFTBRACKET         shift, and go to state 6
    LEFTSQUAREBRACKET   shift, and go to state 7
    RIGHTSQUAREBRACKET  shift, and go to state 67
    LEFTCURLYBRACKET    shift, and go to state 8
    FALSE               shift, and go to state 9
    NONE                shift, and go to state 10
    TRUE                shift, and go to state 12
    NOT                 shift, and go to state 21
    NAME                shift, and go to state 23

    test           go to state 43
    or_test        go to state 44
    and_test       go to state 45
    not_test       go to state 46
    comparison     go to state 47
    expr           go to state 48
    xor_expr       go to state 49
    and_expr       go to state 50
    shift_expr     go to state 51
    arith_expr     go to state 52
    term           go to state 53
    factor         go to state 54
    power          go to state 55
    atom_expr      go to state 56
    atom           go to state 57
    string_help    go to state 58
    testlist       go to state 68
    testlist_list  go to state 60


State 8

  126 atom: LEFTCURLYBRACKET • RIGHTCURLYBRACKET

    RIGHTCURLYBRACKET  shift, and go to state 69


State 9

  132 atom: FALSE •

    $default  reduce using rule 132 (atom)


State 10

  130 atom: NONE •

    $default  reduce using rule 130 (atom)


State 11

   49 break_stmt: BREAK •

    $default  reduce using rule 49 (break_stmt)


State 12

  131 atom: TRUE •

    $default  reduce using rule 131 (atom)


State 13

  147 classdef: CLASS • NAME COLON suite
  148         | CLASS • NAME LEFTBRACKET RIGHTBRACKET COLON suite
  149         | CLASS • NAME LEFTBRACKET arglist RIGHTBRACKET COLON suite

    NAME  shift, and go to state 70


State 14

   51 return_stmt: RETURN • testlist
   52            | RETURN •

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NOT                shift, and go to state 21
    NAME               shift, and go to state 23

    $default  reduce using rule 52 (return_stmt)

    test           go to state 43
    or_test        go to state 44
    and_test       go to state 45
    not_test       go to state 46
    comparison     go to state 47
    expr           go to state 48
    xor_expr       go to state 49
    and_expr       go to state 50
    shift_expr     go to state 51
    arith_expr     go to state 52
    term           go to state 53
    factor         go to state 54
    power          go to state 55
    atom_expr      go to state 56
    atom           go to state 57
    string_help    go to state 58
    testlist       go to state 71
    testlist_list  go to state 60


State 15

   50 continue_stmt: CONTINUE •

    $default  reduce using rule 50 (continue_stmt)


State 16

   70 for_stmt: FOR • exprlist IN testlist COLON suite ELSE COLON suite
   71         | FOR • exprlist IN testlist COLON suite

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NAME               shift, and go to state 23

    expr           go to state 72
    xor_expr       go to state 49
    and_expr       go to state 50
    shift_expr     go to state 51
    arith_expr     go to state 52
    term           go to state 53
    factor         go to state 54
    power          go to state 55
    atom_expr      go to state 56
    atom           go to state 57
    string_help    go to state 58
    exprlist       go to state 73
    exprlist_help  go to state 74


State 17

    6 funcdef: DEF • NAME parameters ARROW test COLON func_body_suite
    7        | DEF • NAME parameters COLON func_body_suite

    NAME  shift, and go to state 75


State 18

   68 while_stmt: WHILE • test COLON suite
   69           | WHILE • test COLON suite ELSE COLON suite

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NOT                shift, and go to state 21
    NAME               shift, and go to state 23

    test         go to state 76
    or_test      go to state 44
    and_test     go to state 45
    not_test     go to state 46
    comparison   go to state 47
    expr         go to state 48
    xor_expr     go to state 49
    and_expr     go to state 50
    shift_expr   go to state 51
    arith_expr   go to state 52
    term         go to state 53
    factor       go to state 54
    power        go to state 55
    atom_expr    go to state 56
    atom         go to state 57
    string_help  go to state 58


State 19

   55 assert_stmt: ASSERT • test COMMA test
   56            | ASSERT • test

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NOT                shift, and go to state 21
    NAME               shift, and go to state 23

    test         go to state 77
    or_test      go to state 44
    and_test     go to state 45
    not_test     go to state 46
    comparison   go to state 47
    expr         go to state 48
    xor_expr     go to state 49
    and_expr     go to state 50
    shift_expr   go to state 51
    arith_expr   go to state 52
    term         go to state 53
    factor       go to state 54
    power        go to state 55
    atom_expr    go to state 56
    atom         go to state 57
    string_help  go to state 58


State 20

   53 global_stmt: GLOBAL • NAME

    NAME  shift, and go to state 78


State 21

   82 not_test: NOT • not_test

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NOT                shift, and go to state 21
    NAME               shift, and go to state 23

    not_test     go to state 79
    comparison   go to state 47
    expr         go to state 48
    xor_expr     go to state 49
    and_expr     go to state 50
    shift_expr   go to state 51
    arith_expr   go to state 52
    term         go to state 53
    factor       go to state 54
    power        go to state 55
    atom_expr    go to state 56
    atom         go to state 57
    string_help  go to state 58


State 22

   62 if_stmt: IF • test COLON suite if_stmt_help ELSE COLON suite
   63        | IF • test COLON suite if_stmt_help
   64        | IF • test COLON suite ELSE COLON suite
   65        | IF • test COLON suite

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    TRUE               shift, and go to state 12
    NOT                shift, and go to state 21
    NAME               shift, and go to state 23

    test         go to state 80
    or_test      go to state 44
    and_test     go to state 45
    not_test     go to state 46
    comparison   go to state 47
    expr         go to state 48
    xor_expr     go to state 49
    and_expr     go to state 50
    shift_expr   go to state 51
    arith_expr   go to state 52
    term         go to state 53
    factor       go to state 54
    power        go to state 55
    atom_expr    go to state 56
    atom         go to state 57
    string_help  go to state 58


State 23

  127 atom: NAME •

    $default  reduce using rule 127 (atom)


State 24

    4 file_input: NEWLINE •

    $default  reduce using rule 4 (file_input)


State 25

    0 $accept: module • $end

    $end  shift, and go to state 81


State 26

    1 module: file_input •
    2 file_input: file_input • NEWLINE
    3           | file_input • stmt

    NUMBER             shift, and go to state 1
    STRING             shift, and go to state 2
    PLUS               shift, and go to state 3
    MINUS              shift, and go to state 4
    BITNOT             shift, and go to state 5
    LEFTBRACKET        shift, and go to state 6
    LEFTSQUAREBRACKET  shift, and go to state 7
    LEFTCURLYBRACKET   shift, and go to state 8
    FALSE              shift, and go to state 9
    NONE               shift, and go to state 10
    BREAK              shift, and go to state 11
    TRUE               shift, and go to state 12
    CLASS              shift, and go to state 13
    RETURN             shift, and go to state 14
    CONTINUE           shift, and go to state 15
    FOR                shift, and go to state 16
    DEF                shift, and go to state 17
    WHILE              shift, and go to state 18
    ASSERT             shift, and go to state 19
    GLOBAL             shift, and go to state 20
    NOT                shift, and go to state 21
    IF                 shift, and go to state 22
    NAME               shift, and go to state 23
    NEWLINE            shift, and go to state 82

    $default  reduce using rule 1 (module)

    funcdef          go to state 27
    stmt             go to state 83
    simple_stmt      go to state 29
    small_stmt_help  go to state 30
    small_stmt       go to state 31
    expr_stmt        go to state 32
    flow_stmt        go to state 33
    break_stmt       go to state 34
    continue_stmt    go to state 35
    return_stmt      go to state 36
    global_stmt      go to state 37
    assert_stmt      go to state 38
    compound_stmt    go to state 39
    if_stmt          go to state 40
    while_stmt       go to state 41
    for_stmt         go to state 42
    test             go to state 43
    or_test          go to state 44
    and_test         go to state 45
    not_test         go to state 46
    comparison       go to state 47
    expr             go to state 48
    xor_expr         go to state 49
    and_expr         go to state 50
    shift_expr       go to state 51
    arith_expr       go to state 52
    term             go to state 53
    factor           go to state 54
    power            go to state 55
    atom_expr        go to state 56
    atom             go to state 57
    string_help      go to state 58
    testlist         go to state 59
    testlist_list    go to state 60
    classdef         go to state 61


State 27

   60 compound_stmt: funcdef •

    $default  reduce using rule 60 (compound_stmt)


State 28

    5 file_input: stmt •

    $default  reduce using rule 5 (file_input)


State 29

   16 stmt: simple_stmt •

    $default  reduce using rule 16 (stmt)


State 30

   18 simple_stmt: small_stmt_help • SEMICOLON NEWLINE
   19            | small_stmt_help • NEWLINE
   21 small_stmt_help: small_stmt_help • SEMICOLON small_stmt

    SEMICOLON  shift, and go to state 84
    NEWLINE    shift, and go to state 85


State 31

   20 small_stmt_help: small_stmt •

    $default  reduce using rule 20 (small_stmt_help)


State 32

   22 small_stmt: expr_stmt •

    $default  reduce using rule 22 (small_stmt)


State 33

   23 small_stmt: flow_stmt •

    $default  reduce using rule 23 (small_stmt)


State 34

   46 flow_stmt: break_stmt •

    $default  reduce using rule 46 (flow_stmt)


State 35

   47 flow_stmt: continue_stmt •

    $default  reduce using rule 47 (flow_stmt)


State 36

   48 flow_stmt: return_stmt •

    $default  reduce using rule 48 (flow_stmt)


State 37

   24 small_stmt: global_stmt •
   54 global_stmt: global_stmt • COMMA NAME

    COMMA  shift, and go to state 86

    $default  reduce using rule 24 (small_stmt)


State 38

   25 small_stmt: assert_stmt •

    $default  reduce using rule 25 (small_stmt)


State 39

   17 stmt: compound_stmt •

    $default  reduce using rule 17 (stmt)


State 40

   57 compound_stmt: if_stmt •

    $default  reduce using rule 57 (compound_stmt)


State 41

   58 compound_stmt: while_stmt •

    $default  reduce using rule 58 (compound_stmt)


State 42

   59 compound_stmt: for_stmt •

    $default  reduce using rule 59 (compound_stmt)


State 43

  145 testlist_list: test •

    $default  reduce using rule 145 (testlist_list)


State 44

   76 test: or_test •
   77     | or_test • IF or_test ELSE test
   79 or_test: or_test • OR and_test

    IF  shift, and go to state 87
    OR  shift, and go to state 88

    $default  reduce using rule 76 (test)


State 45
